2005-10-18  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for RC1 release.

2005-07-08  Keith Packard  <keithp@keithp.com>

	* .cvsignore:
	* src/.cvsignore:
	* src/Makefile.am:
	Add .cvsignore files
	Switch _la_CFLAGS for AM_CFLAGS to clean up directory