@@ -6,6 +6,7 @@ includedir=@includedir@
 Name: xkbui
 Description: The xkbui Library
 Version: @PACKAGE_VERSION@
-Cflags: -I${includedir} @XKBUI_CFLAGS@
-Libs: -L${libdir} -lxkbui @XKBUI_LIBS@
-
+Requires: x11 kbproto
+Requires.private: x11 xt
+Cflags: -I${includedir}
+Libs: -L${libdir} -lxkbui
